Update LICENSE & SpiningCube

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,18 @@
 cmake_minimum_required(VERSION 3.12)
 project(Assignment_4)
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
 
+# Vulkan
 find_package(Vulkan REQUIRED)
 include_directories(${Vulkan_INCLUDE_DIRS} ${CMAKE_CURRENT_LIST_DIR}/include)
 
+# Wayland
+find_package(Wayland REQUIRED)
+include_directories(${Wayland_INCLUDE_DIRS} ${CMAKE_CURRENT_LIST_DIR}/include)
+
 add_executable(spining_cube
     main.cpp
+    lib/SpiningCube.cpp
 )
 target_link_libraries(spining_cube
     ${Vulkan_LIBRARIES}
