--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,19 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find dependencies
+# Find dependencies$
 find_package(Vulkan REQUIRED)
 find_package(Wayland REQUIRED)
 find_package(Libinput REQUIRED)
-include_directories(${Vulkan_INCLUDE_DIRS} ${Wayland_INCLUDE_DIRS} ${Libinput_INCLUDE_DIRS})
+find_package(udev REQUIRED)
+find_package(Systemd REQUIRED)
+include_directories(
+    ${Vulkan_INCLUDE_DIRS}
+    ${Wayland_INCLUDE_DIRS}
+    ${Libinput_INCLUDE_DIRS}
+    ${UDEV_INCLUDE_DIRS}
+    ${SYSTEMD_INCLUDE_DIRS}
+)
 
 include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
 add_executable(spining_cube
@@ -21,4 +29,6 @@ target_link_libraries(spining_cube
     ${Vulkan_LIBRARIES}
     ${Wayland_LIBRARIES}
     ${Libinput_LIBRARIES}
+    ${UDEV_LIBRARIES}
+    ${SYSTEMD_LIBRARIES}
 )
