Use Xcb as window framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Find dependencies$
 find_package(Vulkan REQUIRED)
-find_package(Wayland REQUIRED)
 find_package(Libinput REQUIRED)
 find_package(udev REQUIRED)
+find_package(Xcb REQUIRED)
 find_package(Systemd REQUIRED)
 include_directories(
     ${Vulkan_INCLUDE_DIRS}
-    ${Wayland_INCLUDE_DIRS}
     ${Libinput_INCLUDE_DIRS}
     ${UDEV_INCLUDE_DIRS}
+    ${XCB_INCLUDE_DIRS}
     ${SYSTEMD_INCLUDE_DIRS}
 )
 
@@ -32,8 +32,8 @@ add_executable(spining_cube
 )
 target_link_libraries(spining_cube
     ${Vulkan_LIBRARIES}
-    ${Wayland_LIBRARIES}
     ${Libinput_LIBRARIES}
     ${UDEV_LIBRARIES}
     ${SYSTEMD_LIBRARIES}
+    ${XCB_LIBRARIES}
 )
